--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Selected publications</h2>
+									<h2>Publication highlights</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
+										<span class="logo"><img src="images/ChemMatCoverArt.png" alt="" width='300' height='169'></span>
 										<h3>Chemistry of Materials</h3>
 										<p>My first AI-focused paper talks about using active learning to solve the 'needle in a haystack' problem in materials discovery</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Science</h3>
-										<p>This work shows how computational modeling can be used in tandem with experiments to solve a 30 year old conundrum in catalysis </p>
+										<p>This work shows how computational modeling can be used in tandem with experiments to solve a 30 year old conundrum in catalysis</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
 										<h3>ChemCatChem</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p> This project takes a closer look at how the gap between real catalysts and their computer models affects computational catalyst screening</p>
 									</li>
 								</ul>
 								<footer class="major">
@@ -94,32 +94,31 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Code development</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Codes developed for research</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<strong>5,120</strong> A
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<strong>8,192</strong> B
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>2,048</strong> C
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>4,096</strong> C
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<strong>1,024</strong> E
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">  </p>
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://github.com/hieuadoan" target="_blank" rel="noopener noreferrer" class="button">Github page</a></li>
@@ -131,47 +130,15 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Latest news</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p> New publications, awards and upcoming events.</p>
 								</header>
 								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
 								</footer>
 							</section>
 
 					</div>
 
-				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
