Update pub highlights

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 										<p>My first AI-focused paper talks about using active learning to solve the 'needle in a haystack' problem in materials discovery</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+                                        <span class="logo"><img src="images/Science.png" width='252' height='169'></span>
 										<h3>Science</h3>
 										<p>This work shows how computational modeling can be used in tandem with experiments to solve a 30 year old conundrum in catalysis</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
+                                        <span class="logo"><img src="images/ChemCatChem.png" width='343' height='169'></span>
 										<h3>ChemCatChem</h3>
 										<p> This project takes a closer look at how the gap between real catalysts and their computer models affects computational catalyst screening</p>
 									</li>
