--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                                         discovery. My toolset includes quantum mechanical simulations, 
                                         chemical informatics, machine learning, and most importantly,
                                         fundamental physics and chemistry. <br>
-                                        Research interests: energy storage and conversion, 
+                                        My research interests include energy storage and conversion, 
                                         heterogeneous catalysis, surface science, 
-                                        reaction mechanism, AI for materials discovery.</p>
+                                        reaction mechanism, and AI for materials discovery.</p>
 										<ul class="actions">
 											<li><a href="https://www.linkedin.com/in/hieuadoan/" target="_blank" rel="noopener noreferrer" class="button primary">Linkedin profile</a></li>
 											<li><a href="docs/Doan-CV.pdf" target="_blank" rel="noopener noreferrer" class="button">Full CV</a></li>
