attempt to remove table border

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,7 +7,7 @@ author_profile: true
 
 Note: * = Equal Contribution
 
-<table class="table" style="border:0;">
+<table class="table" style="border:none;">
 <tbody>
 	<tr>
 		<td>
