--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,7 +7,7 @@ author_profile: true
 
 Note: * = Equal Contribution
 
-<table class="table" style="border:none;">
+<table class="table" style="border:none;" border-collapse="collapse">
 <tbody>
 	<tr>
 		<td>
