remove table border

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,7 +7,7 @@ author_profile: true
 
 Note: * = Equal Contribution
 
-<table border="0">
+<table cellspacing="0" cellpadding="0">
 <tbody>
 	<tr>
 		<td>
