--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,7 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-Note: * = Equal Contribution
+Note: * = Equal contribution
 
 <table class="table" style="border:0;">
 <tbody>
