--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -23,7 +23,7 @@ author_profile: true
 		</td>
 	  <td class="publication">
 		  <span class="pubtitle">
-        Accelerated Discovery of Energy Storage Materials via Multiobjective Bayesian Optimization
+        <b>Accelerated Discovery of Energy Storage Materials via Multiobjective Bayesian Optimization</b>
 			</span><br />
 			<span class="authors">
 				Accepted at AIChE Midwest Regional Conference
@@ -50,7 +50,7 @@ author_profile: true
         </td>
 		<td class="publication">
 			<span class="pubtitle">
-        <a href="https://nanohub.org/tools/bayesopt">Active Learning via Bayesian Optimization for Discovery of Energy Storage Materials</a>
+        <a href="https://nanohub.org/tools/bayesopt"><b>Active Learning via Bayesian Optimization for Discovery of Energy Storage Materials</b></a>
 			</span><br />
 			<span class="authors">
         NanoHub Tutorial Series on Machine Learning (Invited)
@@ -77,7 +77,7 @@ author_profile: true
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				Warp Jumping in the Molecular Universe with Active Learning 
+				<b>Warp Jumping in the Molecular Universe with Active Learning</b> 
 			</span><br />
 			<span class="authors">
 				Argonne AI and HPC Seminar (Invited)
@@ -104,7 +104,7 @@ author_profile: true
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-        Toward the Optimal Design of Molybdenum Carbid Catalysts for Biomass Conversion
+        	<b>Toward the Optimal Design of Molybdenum Carbid Catalysts for Biomass Conversion</b>
 			</span><br />
 			<span class="authors">
         American Chemical Socieity Fall Meeting (Invited)
@@ -131,7 +131,7 @@ author_profile: true
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-        The Critical Role of Water at the Gold-Titania Interface in Catalytic CO Oxidation
+        	<b>The Critical Role of Water at the Gold-Titania Interface in Catalytic CO Oxidation</b>
 			</span><br />
 			<span class="authors">
         Gordon Research Conference (Invited)
