move * to bottom and add numbers

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,8 +5,6 @@ permalink: /publications/
 author_profile: true
 ---
 
-Note: * = Equal contribution
-
 <table class="table" style="border:0;">
 <tbody>
 	<tr>
@@ -25,7 +23,7 @@ Note: * = Equal contribution
 		</td>
 	  <td class="publication">
 		  <span class="pubtitle">
-				Accelerating Catalyst Screening via Machine-learned Local Coordination Graph Representations
+				18. Accelerating Catalyst Screening via Machine-learned Local Coordination Graph Representations
 			</span><br />
 			<span class="authors">
 				<b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
@@ -44,7 +42,7 @@ Note: * = Equal contribution
 		</td>
 	    <td class="publication">
 		  <span class="pubtitle">
-				Mesolytic Cleavage of Homobenzylic Ethers for Programmable End-of-Life Function in Redoxmers
+				17. Mesolytic Cleavage of Homobenzylic Ethers for Programmable End-of-Life Function in Redoxmers
 			</span><br />
 			<span class="authors">
 				H. Qian*, M. J. Counihan*, <b>H. A. Doan</b>*, N. A. Ibrahim, A. S. Danis, 
@@ -72,7 +70,7 @@ Note: * = Equal contribution
         </td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/abs/10.1021/acs.chemmater.1c02040">Discovery of Energy Storage Molecular Materials 
+				16. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.chemmater.1c02040">Discovery of Energy Storage Molecular Materials 
 					using Quantum Chemistry-guided Multiobjective Bayesian Optimization</a>
 			</span><br />
 			<span class="authors">
@@ -92,7 +90,7 @@ Note: * = Equal contribution
         </td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/10.1021/acsenergylett.1c01675">Experimental Protocols 
+				15. <a href="https://pubs.acs.org/doi/10.1021/acsenergylett.1c01675">Experimental Protocols 
 					for Studying Organic Non-aqueous Redox Flow Batteries</a>
 			</span><br />
 			<span class="authors">
@@ -113,7 +111,7 @@ Note: * = Equal contribution
         </td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.1c02387">Identification of Active Metal Carbide 
+				14. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.1c02387">Identification of Active Metal Carbide 
 					and Nitride Catalytic Facets for Hydrodeoxygenation Reactions</a>
 			</span><br />
 			<span class="authors">
@@ -133,7 +131,7 @@ Note: * = Equal contribution
         </td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.rsc.org/en/content/articlelanding/2021/ta/d1ta04297a/unauth">TEMPO Allegro: Liquid Catholyte Redoxmers for Nonaqueous Redox Flow Batteries</a>
+				13. <a href="https://pubs.rsc.org/en/content/articlelanding/2021/ta/d1ta04297a/unauth">TEMPO Allegro: Liquid Catholyte Redoxmers for Nonaqueous Redox Flow Batteries</a>
 			</span><br />
 			<span class="authors">
 				Y. Zhao, J. Zhang, G. Agarwal, Z. Yu, R. E. Corman, Y. Wang, L. A. Robertson, 
@@ -161,7 +159,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://iopscience.iop.org/article/10.1149/1945-7111/ab9c7b/meta">Molecular Structure and 
+				12. <a href="https://iopscience.iop.org/article/10.1149/1945-7111/ab9c7b/meta">Molecular Structure and 
 					Electron Affinity of Metal-Solvent Complexes: Insights from Density Functional Theory Simulations</a>
 			</span><br />
 			<span class="authors">
@@ -181,7 +179,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/abs/10.1021/acs.chemmater.0c00768">Quantum Chemistry-informed Active 
+				11. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.chemmater.0c00768">Quantum Chemistry-informed Active 
 					Learning to Accelerate the Design and Discovery of Sustainable Energy Storage Materials</a>
 			</span><br />
 			<span class="authors">
@@ -201,7 +199,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.9b10126">Effect of Ni Dopant on Furan Activation over 
+				10. <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcc.9b10126">Effect of Ni Dopant on Furan Activation over 
 					Mo2C Surface: Insights from First-Principles-Based Microkinetic Modeling</a>
 			</span><br />
 			<span class="authors">
@@ -229,7 +227,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://arxiv.org/abs/1911.07630">Value-Added Chemical Discovery Using Reinforcement Learning</a>
+				9. <a href="https://arxiv.org/abs/1911.07630">Value-Added Chemical Discovery Using Reinforcement Learning</a>
 			</span><br />
 			<span class="authors">
 				P. Jiang, <b>H. A. Doan</b>, S. Madireddy, R. S. Assary, and P. Balaprakash
@@ -256,7 +254,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://www.sciencedirect.com/science/article/pii/S0920586118303365">Theoretical Insights 
+				8. <a href="https://www.sciencedirect.com/science/article/pii/S0920586118303365">Theoretical Insights 
 					Into Direct Methane to Methanol Conversion over Supported Dicopper Oxo Nanoclusters</a>
 			</span><br />
 			<span class="authors">
@@ -284,7 +282,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/abs/10.1021/jacs.7b08740">Finite Size Effects in 
+				7. <a href="https://pubs.acs.org/doi/abs/10.1021/jacs.7b08740">Finite Size Effects in 
 					Submonolayer Catalysts Investigated by CO Electrosorption on PtsML/Pd(100)</a>
 			</span><br />
 			<span class="authors">
@@ -304,7 +302,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="">From Active-Site Models to Real Catalysts: Importance of the Material 
+				6. <a href="">From Active-Site Models to Real Catalysts: Importance of the Material 
 					Gap in the Design of Pd Catalysts for Methane Oxidation</a>
 			</span><br />
 			<span class="authors">
@@ -332,7 +330,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://link.springer.com/article/10.1007/s10562-016-1890-7">Using Gas-phase Clusters to 
+				5. <a href="https://link.springer.com/article/10.1007/s10562-016-1890-7">Using Gas-phase Clusters to 
 					Screen Porphyrin-supported Nanocluster Catalysts for Ethane Oxidation to Ethanol</a>
 			</span><br />
 			<span class="authors">
@@ -352,7 +350,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://www.sciencedirect.com/science/article/pii/S2211339816300521">Water-assisted Oxygen 
+				4. <a href="https://www.sciencedirect.com/science/article/pii/S2211339816300521">Water-assisted Oxygen 
 					Activation during Selective Oxidation Reactions</a>
 			</span><br />
 			<span class="authors">
@@ -380,7 +378,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://www.sciencedirect.com/science/article/pii/S0039602815000813">Novel 2D RuPt Core-edge Nanocluster Catalyst for CO Electro-oxidation</a>
+				3. <a href="https://www.sciencedirect.com/science/article/pii/S0039602815000813">Novel 2D RuPt Core-edge Nanocluster Catalyst for CO Electro-oxidation</a>
 			</span><br />
 			<span class="authors">
 				L. C. Grabow, Q. Yuan, <b>H. A. Doan</b>, and S. R. Brankovic
@@ -407,7 +405,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://www.science.org/doi/abs/10.1126/science.1256018">The Critical Role of Water at the Gold-titania Interface in Catalytic CO Oxidation</a>
+				2. <a href="https://www.science.org/doi/abs/10.1126/science.1256018">The Critical Role of Water at the Gold-titania Interface in Catalytic CO Oxidation</a>
 			</span><br />
 			<span class="authors">
 				J. Saavedra, <b>H. A. Doan</b>, C. J. Pursell, L. C. Grabow, and B. D. Chandler
@@ -434,7 +432,7 @@ Note: * = Equal contribution
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				<a href="https://pubs.acs.org/doi/abs/10.1021/cs200693g">NaBr Poisoning of Au/TiO2 Catalysts: 
+				1. <a href="https://pubs.acs.org/doi/abs/10.1021/cs200693g">NaBr Poisoning of Au/TiO2 Catalysts: 
 					Effects on Kinetics, Poisoning Mechanism, and Estimation of the Number of Catalytic Active Sites</a>
 			</span><br />
 			<span class="authors">
@@ -448,3 +446,4 @@ Note: * = Equal contribution
     </tr>
 </tbody>
 </table>
+* = Equal authorship
