update status of JMCA pub

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -48,7 +48,7 @@ author_profile: true
 				H. Qian*, M. J. Counihan*, <b>H. A. Doan</b>*, N. A. Ibrahim, A. S. Danis, 
 				W. Setwipatanachai, N. S. Purwanto, J. Rodriguez-Lopez, R. S. Assary, and J. S. Moore
 			</span><br />
-			<span class="venuetype"></span><span class="venue">In revision</span>
+			<span class="venuetype"></span><span class="venue"> Journal of Materials Chemistray A. Accepted</span>
 			<br />
 			<span class="links">
 			</span>
