update JMCA pub details

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -42,13 +42,14 @@ author_profile: true
 		</td>
 	    <td class="publication">
 		  <span class="pubtitle">
-				17. Mesolytic Cleavage of Homobenzylic Ethers for Programmable End-of-Life Function in Redoxmers
+				17. <a href="https://pubs.rsc.org/en/Content/ArticleLanding/2022/TA/D1TA10291E"> Mesolytic Cleavage of Homobenzylic Ethers for 
+					Programmable End-of-Life Function in Redoxmers </a>
 			</span><br />
 			<span class="authors">
 				H. Qian*, M. J. Counihan*, <b>H. A. Doan</b>*, N. A. Ibrahim, A. S. Danis, 
 				W. Setwipatanachai, N. S. Purwanto, J. Rodriguez-Lopez, R. S. Assary, and J. S. Moore
 			</span><br />
-			<span class="venuetype"></span><span class="venue"> Accepted to the Journal of Materials Chemistry A</span>
+			<span class="venuetype"></span><span class="venue">Journal of Materials Chemistry A, 2022, Advance Article </span>
 			<br />
 			<span class="links">
 			</span>
