--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -26,7 +26,7 @@ author_profile: true
         <b>Accelerated Discovery of Energy Storage Materials via Multiobjective Bayesian Optimization</b>
 			</span><br />
 			<span class="authors">
-				Accepted at AIChE Midwest Regional Conference
+			AIChE Midwest Regional Conference
 			</span><br />
 			<span class="venuetype"></span><span class="venue">Virtual</span>
 			<br />
