update sumbission status of Mo2C GNN

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -28,7 +28,7 @@ author_profile: true
 			<span class="authors">
 				<b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
 			</span><br />
-			<span class="venuetype"></span><span class="venue">To be submitted</span>
+			<span class="venuetype"></span><span class="venue">Submitted</span>
 			<br />
 			<span class="links">
 			</span>
