--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -21,6 +21,25 @@ author_profile: true
         
 			</span>
 		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				  19. Accelerating Catalyst Screening via Machine-learned Local Coordination Graph Representations
+			  </span><br />
+			  <span class="authors">
+				  <b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
+			  </span><br />
+			  <span class="venuetype"></span><span class="venue">In preparation.</span>
+			  <br />
+			  <span class="links">
+			  </span>
+		  </td>
+	  </tr>
+	  <tr>
+		  <td>
+			  <span class="date">
+				  
+			  </span>
+		  </td>
 	    <td class="publication">
 		  <span class="pubtitle">
 				18. Accelerating Catalyst Screening via Machine-learned Local Coordination Graph Representations
@@ -28,7 +47,7 @@ author_profile: true
 			<span class="authors">
 				<b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
 			</span><br />
-			<span class="venuetype"></span><span class="venue">Submitted to Chemical Science</span>
+			<span class="venuetype"></span><span class="venue">In preparation.</span>
 			<br />
 			<span class="links">
 			</span>
