Add MDF dataset

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -42,12 +42,12 @@ author_profile: true
 		  </td>
 	    <td class="publication">
 		  <span class="pubtitle">
-				18. Accelerating Catalyst Screening via Machine-learned Local Coordination Graph Representations
+				18. Datasets for Accelerating Catalysts Screening via Machine-Learned Local Coordination Graph Representations
 			</span><br />
 			<span class="authors">
 				<b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
 			</span><br />
-			<span class="venuetype"></span><span class="venue">In preparation.</span>
+			<span class="venuetype"></span><span class="venue">Materials Data Facility.</span>
 			<br />
 			<span class="links">
 			</span>
