add year to MDF pub

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -47,7 +47,7 @@ author_profile: true
 			<span class="authors">
 				<b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
 			</span><br />
-			<span class="venuetype"></span><span class="venue">Materials Data Facility.</span>
+			<span class="venuetype"></span><span class="venue">Materials Data Facility, 2022</span>
 			<br />
 			<span class="links">
 			</span>
