update publication status

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -23,12 +23,12 @@ author_profile: true
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				  19. Accelerating Catalyst Screening via Machine-learned Local Coordination Graph Representations
+				  19. Accelerating the Evaluation of Crucial Descriptors for Catalyst Screening via Message Passing Neural Network
 			  </span><br />
 			  <span class="authors">
 				  <b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
 			  </span><br />
-			  <span class="venuetype"></span><span class="venue">In preparation.</span>
+			  <span class="venuetype"></span><span class="venue">Submitted.</span>
 			  <br />
 			  <span class="links">
 			  </span>
