--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -28,7 +28,7 @@ author_profile: true
 			  <span class="authors">
 				  <b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
 			  </span><br />
-			  <span class="venuetype"></span><span class="venue">Submitted.</span>
+			  <span class="venuetype"></span><span class="venue">Digital Discovery, 2022. Accepted.</span>
 			  <br />
 			  <span class="links">
 			  </span>
@@ -68,7 +68,7 @@ author_profile: true
 				H. Qian*, M. J. Counihan*, <b>H. A. Doan</b>*, N. A. Ibrahim, A. S. Danis, 
 				W. Setwipatanachai, N. S. Purwanto, J. Rodriguez-Lopez, R. S. Assary, and J. S. Moore
 			</span><br />
-			<span class="venuetype"></span><span class="venue">Journal of Materials Chemistry A, 2022, Advance Article </span>
+			<span class="venuetype"></span><span class="venue">Journal of Materials Chemistry A 10, 7739-7753, 2022</span>
 			<br />
 			<span class="links">
 			</span>
