add link to DD paper

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -23,7 +23,7 @@ author_profile: true
 		</td>
 		<td class="publication">
 			<span class="pubtitle">
-				  19. Accelerating the Evaluation of Crucial Descriptors for Catalyst Screening via Message Passing Neural Network
+				  19. <a href="https://pubs.rsc.org/en/content/articlelanding/2022/dd/d2dd00088a"> Accelerating the Evaluation of Crucial Descriptors for Catalyst Screening via Message Passing Neural Network </a>
 			  </span><br />
 			  <span class="authors">
 				  <b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
@@ -42,7 +42,7 @@ author_profile: true
 		  </td>
 	    <td class="publication">
 		  <span class="pubtitle">
-				18. Datasets for Accelerating Catalysts Screening via Machine-Learned Local Coordination Graph Representations
+				18. <a href="https://acdc.alcf.anl.gov/mdf/detail/doan_datasets_accelerating_representations_v1.1/"> Datasets for Accelerating Catalysts Screening via Machine-Learned Local Coordination Graph Representations </a>
 			</span><br />
 			<span class="authors">
 				<b>H. A. Doan</b>, C. Li, L. Ward, M. Zhou, L. S. Curtiss, and R. S. Assary
