--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -26,7 +26,7 @@ author_profile: true
         <b>Accelerating the Evaluation of Crucial Descriptors in Computational Catalyst Screening via Graph Neural Network</b>
 			</span><br />
 			<span class="authors">
-			American Chemical Socieity Spring Meeting
+			American Chemical Society Spring Meeting
 			</span><br />
 			<span class="venuetype"></span><span class="venue">Indianapolis, IN</span>
 			<br />
