Updated CV with new pub

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -21,6 +21,21 @@ author_profile: true
         
 			</span>
 		</td>
+
+		<td class="publication">
+			<span class="pubtitle">
+				  19. <a href="https://pubs.acs.org/doi/10.1021/acs.jpclett.3c00863"> Computational Screening of Supported Metal Oxide Nanoclusters for Methane Activation: Insights into Homolytic versus Heterolytic C–H Bond Dissociation </a>
+			  </span><br />
+			  <span class="authors">
+				  <b>H. A. Doan</b>, X. Wang, and R. Q. Snurr
+			  </span><br />
+			  <span class="venuetype"></span><span class="venue">Journal of Physical Chemistry Letters 14, 5018-5024, 2023 </span>
+			  <br />
+			  <span class="links">
+			  </span>
+		</td>
+
+
 		<td class="publication">
 			<span class="pubtitle">
 				  19. <a href="https://pubs.rsc.org/en/content/articlelanding/2022/dd/d2dd00088a"> Accelerating the Evaluation of Crucial Descriptors for Catalyst Screening via Message Passing Neural Network </a>
