--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -37,6 +37,11 @@ author_profile: true
 	</tr>
 
 	<tr>
+		<td>
+			<span class="date">
+
+			</span>
+		</td>
 		<td class="publication">
 			<span class="pubtitle">
 				  19. <a href="https://pubs.rsc.org/en/content/articlelanding/2022/dd/d2dd00088a"> Accelerating the Evaluation of Crucial Descriptors for Catalyst Screening via Message Passing Neural Network </a>
