Added Akash's paper

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -24,6 +24,25 @@ author_profile: true
 
 		<td class="publication">
 			<span class="pubtitle">
+				  20. <a href="https://pubs.rsc.org/en/content/articlehtml/2023/DD/D3DD00050H"> In Silico Discovery of a New Class of Anolyte Redoxmers for Non-aqueous Redox Flow Batteries </a>
+			  </span><br />
+			  <span class="authors">
+				  A. Jain, I. A. Shkrob, <b>H. A. Doan</b>, L. A. Robertson, L. Zhang, and R. S. Assary
+			  </span><br />
+			  <span class="venuetype"></span><span class="venue">Digital Discovery 2, 1197-1208, 2023 </span>
+			  <br />
+			  <span class="links">
+			  </span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
 				  20. <a href="https://pubs.acs.org/doi/10.1021/acs.jpclett.3c00863"> Computational Screening of Supported Metal Oxide Nanoclusters for Methane Activation: Insights into Homolytic versus Heterolytic C–H Bond Dissociation </a>
 			  </span><br />
 			  <span class="authors">
@@ -35,7 +54,6 @@ author_profile: true
 			  </span>
 		</td>
 	</tr>
-
 	<tr>
 		<td>
 			<span class="date">
