Updated pub list

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -24,6 +24,44 @@ author_profile: true
 
 		<td class="publication">
 			<span class="pubtitle">
+				  23. <a href=""> Active Learnig Guided Computational Discovery of Plant-based Redoxmers for Organic Non-aqueous Redox Flow Battery </a>
+			  </span><br />
+			  <span class="authors">
+				  J. Akash, I. A. Shkrob, <b>H. A. Doan</b>, K. Adams, J. S. Moore, and R. S. Assary
+			  </span><br />
+			  <span class="venuetype"></span><span class="venue">ACS Applied Materials & Interfaces. In press. </span>
+			  <br />
+			  <span class="links">
+			  </span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
+				  22. <a href="https://iopscience.iop.org/article/10.1149/1945-7111/ad09f7"> Trimer Quinoxalines as Organic Cathode Materials for Lithium-Ion Batteries </a>
+			  </span><br />
+			  <span class="authors">
+				  L. Gao, B. Wang, <b>H. A. Doan</b>, Y. Du, I. A. Shkrob, and C. Liao
+			  </span><br />
+			  <span class="venuetype"></span><span class="venue">Journal of The Electrochemical Society 170, 110520, 2023 </span>
+			  <br />
+			  <span class="links">
+			  </span>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<span class="date">
+
+			</span>
+		</td>
+		<td class="publication">
+			<span class="pubtitle">
 				  21. <a href="https://pubs.rsc.org/en/content/articlehtml/2023/DD/D3DD00050H"> In Silico Discovery of a New Class of Anolyte Redoxmers for Non-aqueous Redox Flow Batteries </a>
 			  </span><br />
 			  <span class="authors">
