Fixed first author's name

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -27,7 +27,7 @@ author_profile: true
 				  23. <a href=""> Active Learnig Guided Computational Discovery of Plant-based Redoxmers for Organic Non-aqueous Redox Flow Battery </a>
 			  </span><br />
 			  <span class="authors">
-				  J. Akash, I. A. Shkrob, <b>H. A. Doan</b>, K. Adams, J. S. Moore, and R. S. Assary
+				  A. Jain, I. A. Shkrob, <b>H. A. Doan</b>, K. Adams, J. S. Moore, and R. S. Assary
 			  </span><br />
 			  <span class="venuetype"></span><span class="venue">ACS Applied Materials & Interfaces. In press. </span>
 			  <br />
