Added equal author contribution for Nat Comm

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -29,7 +29,7 @@ author_profile: true
 					Electrolyte Formulations </a>
 			  </span><br />
 			  <span class="authors">
-				  J. Noh, <b>H. A. Doan</b>, H. Job, L. A. Robertson, L. Zhang, R. S. Assary, K. Mueller, V. Murugensang, and Y. Liang
+				  J. Noh*, <b>H. A. Doan</b>*, H. Job, L. A. Robertson, L. Zhang, R. S. Assary, K. Mueller, V. Murugensang, and Y. Liang
 			  </span><br />
 			  <span class="venuetype"></span><span class="venue">Nature Communications 15, 2757, 2024 </span>
 			  <br />
