--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -24,6 +24,21 @@ author_profile: true
 
 		<td class="publication">
 			<span class="pubtitle">
+				  25. <a href="https://pubs.acs.org/doi/10.1021/acsenergylett.4c01215"> Acidity-Governed Rules in the Electrochemical 
+					Performance of Fluorinated Benzenes for High-Voltage Lithium Metal Batteries </a>
+			  </span><br />
+			  <span class="authors">
+				  X. Li, X. Wu, <b>H. A. Doan</b>, Z. Yang, R. Amine, M. Li, M. V. Bracamonte, C. Su, and K. Amine
+			  </span><br />
+			  <span class="venuetype"></span><span class="venue">ACS Energy Letters 9, 3484-3491, 2024 </span>
+			  <br />
+			  <span class="links">
+			  </span>
+		</td>
+	</tr>
+	<tr>
+		<td class="publication">
+			<span class="pubtitle">
 				  24. <a href="https://www.nature.com/articles/s41467-024-47070-5"> An
 					Integrated Hight-throughput Robotic Platform and Active Learning Approach for Accelerated Discovery of Optimal
 					Electrolyte Formulations </a>
