--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -37,6 +37,11 @@ author_profile: true
 		</td>
 	</tr>
 	<tr>
+		<td>
+			<span class="date">
+
+			</span>
+		</td>
 		<td class="publication">
 			<span class="pubtitle">
 				  24. <a href="https://www.nature.com/articles/s41467-024-47070-5"> An
