Changed private to favorite

--- a/_pages/private/recipe.html
+++ b/_pages/private/recipe.html
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "My Private Recipes"
+title: "My Favorite Recipes"
 permalink: /private/
 ---
 <div class="recipe-list">
